--- a/final-pjt-front/src/assets/main.css
+++ b/final-pjt-front/src/assets/main.css
@@ -2,13 +2,14 @@ body {
     margin: 0;
     padding: 0;
     height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     position: relative;
   }
 
   #app{
-    padding: 20px;
+
     /* Ensure content takes at least full height minus footer height */
     min-height: calc(100% - 50px); /* Adjust 50px according to the footer height */
   }
