로그인 문제해결, 커뮤니티 생성,수정,삭제, 댓글 생성,삭제기능

--- a/final-pjt-front/src/assets/font.css
+++ b/final-pjt-front/src/assets/font.css
@@ -1,4 +1,12 @@
 /* 폰트 모음 */
+
+:root {
+    --font-size-lg: 5vw;
+    --font-size-md: 4vw;
+    --font-size-sm: 3vw;
+    
+}
+
 /*  눈누 폰트  */
 @font-face {
     font-family: 'PyeongChangPeace-Bold';
