--- a/final-pjt-front/src/assets/main.css
+++ b/final-pjt-front/src/assets/main.css
@@ -22,6 +22,7 @@ body::after {
   display: flex;
   flex-direction: column;
   height: 100%;
+  min-height: 100%;
 
 }
 
@@ -31,6 +32,6 @@ body::after {
   color: white;
   text-align: center;
   width: 100%;
-  height: 50px;
+  height: 100px;
   line-height: 50px;
 }
