--- a/final-pjt-front/src/assets/main.css
+++ b/final-pjt-front/src/assets/main.css
@@ -29,9 +29,13 @@ body::after {
 
 .footer {
   background-color: #000000;
+  display: flex;
   color: white;
-  text-align: center;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   height: 100px;
-  line-height: 50px;
+  flex-direction: column;
+  padding: 50px;
+  font-size: 10px;
 }
